Add debug mode (Toggle by 'd'), add Green Background when it is in your turn

--- a/Boardgame/src/Game/BigTwo/components/You/You.scss
+++ b/Boardgame/src/Game/BigTwo/components/You/You.scss
@@ -1,7 +1,17 @@
 .you {
   .card {
     cursor: pointer;
+
   }
+
+  .inturn {
+    background: green;
+  }
+
+  .notinturn {
+    background: white;
+  }
+
 
   .controls {
     transform: translateY(-100%);
