--- a/Boardgame/src/Game/BigTwo/components/You/You.scss
+++ b/Boardgame/src/Game/BigTwo/components/You/You.scss
@@ -16,7 +16,7 @@
   .controls {
     transform: translateY(-100%);
     position: absolute;
-    right: 0;
+    right: 50%;
     z-index: 10;
 
     button {
