Update icon and UI

--- a/Boardgame/src/Game/BigTwo/components/You/You.scss
+++ b/Boardgame/src/Game/BigTwo/components/You/You.scss
@@ -16,8 +16,15 @@
   .controls {
     transform: translateY(-100%);
     position: absolute;
-    right: 50%;
+    right: 0%;
     z-index: 10;
+
+    .icon {
+      transform: translateY(-100%);
+      position: absolute;
+      right: 0%;
+      z-index: 10;
+    }
 
     button {
       margin: 0 3px;
