--- a/Boardgame/src/Game/BigTwo/components/Center/Center.scss
+++ b/Boardgame/src/Game/BigTwo/components/Center/Center.scss
@@ -1,6 +1,8 @@
 .center {
   align-items: center;
 
+
+
   .last-hand {
     display: flex;
     justify-content: center;
@@ -16,4 +18,14 @@
   .message {
     text-align: center;
   }
+}
+
+.reverse {
+  background: url("../reverse.jpeg") no-repeat center;
+  opacity: 0.4;
+
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-size: cover;
 }
