--- a/Boardgame/src/Game/BigTwo/components/Center/Center.scss
+++ b/Boardgame/src/Game/BigTwo/components/Center/Center.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     perspective: 300px;
+    opacity: 1 !important;
 
     .card {
       @include card-size(100px);
@@ -21,8 +22,11 @@
 }
 
 .reverse {
+  width: 100%;
+  max-width: 100%;
+
   background: url("../reverse.jpeg") no-repeat center;
-  opacity: 0.4;
+  // opacity: 0.4;
 
   // -webkit-background-size: cover;
   // -moz-background-size: cover;
