exchange cards, test

--- a/Boardgame/src/Game/BigTwo/components/BigTwoBoard/BigTwoBoard.scss
+++ b/Boardgame/src/Game/BigTwo/components/BigTwoBoard/BigTwoBoard.scss
@@ -13,7 +13,7 @@
 
   $grid-corner-size: $card-height + $card-margin * 2;
   $grid-template: $grid-corner-size calc(100% - #{$grid-corner-size * 2}) $grid-corner-size;
-  $max-dimension: ($card-width + $card-margin * 2) * 13;
+  $max-dimension: ($card-width + $card-margin * 2) * 15;
 
   &.start {
     display: grid;
@@ -57,7 +57,7 @@
       // bottom, top
       &:nth-child(odd) .grid-container {
         display: grid;
-        grid-template-columns: repeat(13, calc(100% / 13));
+        grid-template-columns: repeat(15, calc(100% / 15));
         grid-template-rows: repeat(1, auto);
         justify-content: center;
 
@@ -70,7 +70,7 @@
       &:nth-child(even) .grid-container {
         display: grid;
         grid-template-columns: repeat(1, auto);
-        grid-template-rows: repeat(13, calc(100% / 13));
+        grid-template-rows: repeat(15, calc(100% / 15));
         align-items: center;
 
         height: 100%;
@@ -124,7 +124,7 @@
       // bottom, top
       &:nth-child(odd) .grid-container {
         display: grid;
-        grid-template-columns: repeat(13, calc(100% / 13));
+        grid-template-columns: repeat(15, calc(100% / 15));
         grid-template-rows: repeat(1, auto);
         justify-content: center;
 
@@ -137,7 +137,74 @@
       &:nth-child(even) .grid-container {
         display: grid;
         grid-template-columns: repeat(1, auto);
-        grid-template-rows: repeat(13, calc(100% / 13));
+        grid-template-rows: repeat(15, calc(100% / 15));
+        align-items: center;
+
+        height: 100%;
+        max-height: $max-dimension;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+      }
+    }
+  }
+  &.exchange {
+    display: grid;
+    grid-template-rows: $grid-template;
+    grid-template-columns: $grid-template;
+
+    > div {
+      position: relative;
+
+      //bottom
+      &:nth-child(1) {
+        grid-column: 2;
+        grid-row: 3;
+      }
+
+      &.left {
+        grid-column: 1;
+        grid-row: 2;
+      }
+
+      &.top {
+        grid-column: 2;
+        grid-row: 1;
+        width: 100%;
+        margin: 0 auto;
+      }
+
+      &.right {
+        grid-column: 3;
+        grid-row: 2;
+      }
+
+      &.center {
+        grid-column: 2;
+        grid-row: 2;
+
+        display: flex;
+        justify-content: center;
+      }
+
+      // bottom, top
+      &:nth-child(odd) .grid-container {
+        display: grid;
+        grid-template-columns: repeat(15, calc(100% / 15));
+        grid-template-rows: repeat(1, auto);
+        justify-content: center;
+
+        width: 100%;
+        max-width: $max-dimension;
+        margin: auto;
+      }
+
+      // left, right
+      &:nth-child(even) .grid-container {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        grid-template-rows: repeat(15, calc(100% / 15));
         align-items: center;
 
         height: 100%;
